Refactor Overflow mod structure and update features. Added new config files, improved UI actions for consumables, and removed legacy modules. Updated version to 2.0.0 and enhanced README with detailed features and architecture.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
 
 .lovelyignore
+.agent/
+.agents/
+.claude/
+.cursor/
+INIT.md
+AGENT.md
+mod.config.json
+docs/*
+!docs/description.md
+!docs/NEXUSMODS_DESCRIPTION.txt
+.tmp/
+release/
+scripts/
